[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/battlenet.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Scenes/Defeat.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="DefeatScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Margin-Title" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 47.0
rect_min_size = Vector2( 962, 47 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin-Title"]
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Destroyed!"
align = 1

[node name="Margin-Body" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 1024.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Margin-Body"]
margin_top = 39.0
margin_right = 1024.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "Your suit has been destroyed. Try again?"
align = 1
autowrap = true

[node name="Margin-Score" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 1024.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score"]
margin_right = 1024.0
margin_bottom = 100.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 48.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Score/VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 52.0
alignment = 1

[node name="Margin-Body2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 1024.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 100 )

[node name="Margin-Buttons" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 1024.0
margin_bottom = 403.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Margin-Buttons"]
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
alignment = 1

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer"]
margin_left = 352.0
margin_right = 464.0
margin_bottom = 40.0
text = "Return to menu"

[node name="TryAgain" type="Button" parent="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer"]
margin_left = 468.0
margin_right = 536.0
margin_bottom = 40.0
text = "Try again"

[node name="Replay" type="Button" parent="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer"]
margin_left = 540.0
margin_right = 672.0
margin_bottom = 40.0
text = "Test a new loadout"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Margin-Buttons/HBoxContainer/Replay" to="." method="_on_Replay_pressed"]
